# tgfsearch

./: README.md  make_docs.py  mem_test.py  setup.cfg
docs/: config_file_docs.txt  data_reader.html  detector.html  index.html  reader.html  scintillator.html  tools.html
tgfsearch/: __init__.py  data_reader.py  gui.py  parameters.py  search.py  tools.py
tgfsearch/config/: auto_search_config.json  detector_config.json  parameters.py  search_config.json
tgfsearch/deployments/: THOR5_deployment_240723_240822.json
tgfsearch/detectors/: adaptive_detector.py  detector.py  scintillator.py
tgfsearch/helpers/: helper_funcs.py
tgfsearch/tools/: data_reader.py  reader.py  tools.py
tgfsearch/utilities/: auto_search.py  image_collector.py  mem_test.py
