[metadata]
name = tgfsearch
version = 3.20.1
summary = A package containing tools for searching TGF data.
home_page = https://github.com/JSheare/TGF_and_glow_search_program
author = Jacob Shearer
author_email = jacob.shearer6912@gmail.com


[options]
packages = 
	tgfsearch
	tgfsearch/deployments
	tgfsearch/detectors
	tgfsearch/helpers
	tgfsearch/utilities
python_requires = >=3.10
install_requires = 
	scipy
	numpy
	pandas
	matplotlib
	psutil
	selenium
	lxml

[options.entry_points]
console_scripts =
	tgf-search-cl = tgfsearch.search:main
	tgf-autosearch = tgfsearch.utilities.auto_search:main
	tgf-collect = tgfsearch.utilities.image_collector:main
    tgf-mem = tgfsearch.utilities.mem_test:main
gui_scripts =
    tgf-search = tgfsearch.gui:main

[options.package_data]
tgfsearch =
    deployments/*.json
    config/*.json
	